fix the view /tickets/dashboard

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="/schedules">HORARIOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/tickets">BOLETAS</a>
+                    <a class="nav-link" href="/tickets/login">BOLETAS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#location">CONTACTO</a>
