--- a/views/buyTickets.ejs
+++ b/views/buyTickets.ejs
@@ -1,14 +1,94 @@
 <%- include('./partials/header.ejs') %>
     <%- include('./partials/navbar.ejs') %>
-    <h1 class="text-center">Sección de compra de Tickets</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <a href="/tickets" class="btn btn-primary btn-block">Volver atrás</a>
-            </div>
-            <div class="col-md-6">
-                <a href="/find" class="btn btn-primary btn-block">Gestionar tickets</a>
+        <h1 class="text-center">Sección de compra de Tickets</h1>
+        <div class="container">
+            <p class="text-center">Bienvenido a la sección de compra de tickets.</p>
+            <p class="text-center">Completa el siguiente formulario para comprar tus tickets.</p>
+            <form class="needs-validation" novalidate>
+                <div class="form-row">
+                    <div class="col-md-6 mb-3">
+                        <label for="validationCustom01">Nombre</label>
+                        <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="validationCustom02">Correo</label>
+                        <input type="email" class="form-control" id="validationCustom02" value="user@email.com" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="col-md-6 mb-3">
+                        <label for="validationCustom03">City</label>
+                        <input type="text" class="form-control" id="validationCustom03" required>
+                        <div class="invalid-feedback">
+                            Please provide a valid city.
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <label for="validationCustom04">State</label>
+                        <select class="custom-select" id="validationCustom04" required>
+                            <option selected disabled value="">Choose...</option>
+                            <option>...</option>
+                        </select>
+                        <div class="invalid-feedback">
+                            Please select a valid state.
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <label for="validationCustom05">Zip</label>
+                        <input type="text" class="form-control" id="validationCustom05" required>
+                        <div class="invalid-feedback">
+                            Please provide a valid zip.
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                        <label class="form-check-label" for="invalidCheck">
+                            Agree to terms and conditions
+                        </label>
+                        <div class="invalid-feedback">
+                            You must agree before submitting.
+                        </div>
+                    </div>
+                </div>
+                <button class="btn btn-primary" type="submit">Submit form</button>
+            </form>
+
+            <script>
+                // Example starter JavaScript for disabling form submissions if there are invalid fields
+                (function () {
+                    'use strict';
+                    window.addEventListener('load', function () {
+                        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                        var forms = document.getElementsByClassName('needs-validation');
+                        // Loop over them and prevent submission
+                        var validation = Array.prototype.filter.call(forms, function (form) {
+                            form.addEventListener('submit', function (event) {
+                                if (form.checkValidity() === false) {
+                                    event.preventDefault();
+                                    event.stopPropagation();
+                                }
+                                form.classList.add('was-validated');
+                            }, false);
+                        });
+                    }, false);
+                })();
+            </script>
+            <div class="row">
+                <div class="col-md-6">
+                    <a href="/tickets" class="btn btn-primary btn-block">Volver atrás</a>
+                </div>
+                <div class="col-md-6">
+                    <a href="/find" class="btn btn-primary btn-block">Gestionar tickets</a>
+                </div>
             </div>
         </div>
-    </div>
-<%- include('./partials/footer.ejs') %>
+        <br>
+        <%- include('./partials/footer.ejs') %>
