--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -1,14 +1,23 @@
 <%- include('./partials/header.ejs') %>
     <%- include('./partials/navbar.ejs') %>
-    <h1 class="text-center">Sección de Tickets</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <a href="/tickets/buy" class="btn btn-primary btn-block">Comprar tickets</a>
-            </div>
-            <div class="col-md-6">
-                <a href="/find" class="btn btn-primary btn-block">Gestionar tickets</a>
-            </div>
+        <h1 class="text-center">Sección de Tickets</h1>
+        <div class="container">
+            <p class="text-center">Ingresa con tu nombre, correo y contraseña para comprar y gestionar tus tickets.</p>
+            <form action="/tickets/dashboard" method="post">
+                <div class="form-group">
+                    <label for="Name">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" aria-describedby="nameHelp" placeholder="Ingresa tu nombre">
+                </div>
+                <div class="form-group">
+                    <label for="Email">Correo</label>
+                    <input type="email" class="form-control" id="correo" aria-describedby="emailHelp" placeholder="Ingresa tu correo">
+                </div>
+                <div class="form-group">
+                    <label for="Password">Contraseña</label>
+                    <input type="password" class="form-control" id="contraseña" placeholder="Ingresa tu contraseña">
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
+            </form>
         </div>
-    </div>
-<%- include('./partials/footer.ejs') %>
+        <br><br><br><br><br>
+        <%- include('./partials/footer.ejs') %>
