--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,18 @@
 <%- include('./partials/header.ejs') %>
     <%- include('./partials/navbar.ejs') %>
     <h1 class="text-center">Dashboard</h1>
+    <h2 class="text-center">Bienvenido <%= nombre %></h2>
     <div class="container">
-        <a href="/tickets" class="btn btn-primary btn-block">Salir</a>
+        <div class="row">
+            <div class="col-md-6">
+                <a href="/tickets/dashboard/buy" class="btn btn-primary btn-block">Comprar Tickets</a>
+            </div>
+            <div class="col-md-6">
+                <a href="" class="btn btn-primary btn-block">Gestionar Tickets</a>
+            </div>
+        </div>
+        <br>
+        <a href="/tickets/login" class="btn btn-primary btn-block">Salir</a>
     </div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br>
 <%- include('./partials/footer.ejs') %>
