Add views and configure routes and controllers

--- a/views/buyTickets.ejs
+++ b/views/buyTickets.ejs
@@ -110,14 +110,17 @@
                     }, false);
                 })();
             </script>
+            <br>
+            <br>
             <div class="row">
                 <div class="col-md-6">
                     <a href="/tickets" class="btn btn-primary btn-block">Volver atrás</a>
                 </div>
                 <div class="col-md-6">
-                    <a href="/find" class="btn btn-primary btn-block">Gestionar tickets</a>
+                    <a href="/tickets/dashboard/manage" class="btn btn-primary btn-block">Gestionar tickets</a>
                 </div>
             </div>
         </div>
+        <br>
         <br>
         <%- include('./partials/footer.ejs') %>
