--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,7 +8,7 @@
                 <a href="/tickets/dashboard/buy" class="btn btn-primary btn-block">Comprar Tickets</a>
             </div>
             <div class="col-md-6">
-                <a href="" class="btn btn-primary btn-block">Gestionar Tickets</a>
+                <a href="/tickets/dashboard/manage" class="btn btn-primary btn-block">Gestionar Tickets</a>
             </div>
         </div>
         <br>
