fix(dashboard): Repair the route with params!

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,4 +15,5 @@
         <a href="/tickets/login" class="btn btn-primary btn-block">Salir</a>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <%- include('./partials/buyTickets.ejs', {nombre, correo}) %>
 <%- include('./partials/footer.ejs') %>
