--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/header.ejs') %>
     <%- include('./partials/navbar.ejs') %>
-        <h1 class="text-center">Sección de Tickets</h1>
+        <h1 class="text-center">LOGIN</h1>
         <div class="container">
             <p class="text-center">Ingresa con tu nombre, correo y contraseña para comprar y gestionar tus tickets.</p>
             <div class="card">
