--- a/views/buyTickets.ejs
+++ b/views/buyTickets.ejs
@@ -4,39 +4,44 @@
         <div class="container">
             <p class="text-center">Bienvenido a la sección de compra de tickets.</p>
             <p class="text-center">Completa el siguiente formulario para comprar tus tickets.</p>
-            <form class="needs-validation" novalidate action="/comprar-entradas" method="post">
+            <form class="needs-validation" novalidate action="/tickets/buy/success" method="post">
                 <div class="form-row">
                     <div class="col-md-6 mb-3">
                         <label for="validationCustom01">Nombre</label>
-                        <input type="text" class="form-control" id="validationCustom01" value="<%= nombre %>" readonly>
+                        <input type="text" class="form-control" name="nombre" id="validationCustom01" value="<%= nombre %>" readonly>
                         <div class="valid-feedback">
                             Looks good!
                         </div>
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="validationCustom02">Correo</label>
-                        <input type="email" class="form-control" id="validationCustom02" value="<%= correo %>" readonly>
+                        <input type="email" class="form-control" name="correo" id="validationCustom02" value="<%= correo %>" readonly>
                         <div class="valid-feedback">
                             Looks good!
                         </div>
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="col-md-6 mb-3">
-                        <label for="validationCustom03">City</label>
-                        <input type="text" class="form-control" id="validationCustom03" required>
+                    <div class="col-md-3 mb-3">
+                        <label for="validationCustom03">Sede</label>
+                        <select class="custom-select" name="sede" id="validationCustom03" required>
+                            <option selected disabled value="">Elige una sede</option>
+                            <option>Cabecera</option>
+                            <option>Cacique</option>
+                            <option>Cañaveral</option>
+                            <option>Delacuesta</option>
+                        </select>
                         <div class="invalid-feedback">
-                            Please provide a valid city.
+                            Por favor, selecciona una sede.
                         </div>
                     </div>
                     <div class="col-md-3 mb-3">
-                        <label for="validationCustom04">State</label>
-                        <select class="custom-select" id="validationCustom04" required>
-                            <option selected disabled value="">Choose...</option>
-                            <option>...</option>
+                        <label for="validationCustom04">Película</label>
+                        <select class="custom-select" name="pelicula" id="validationCustom04" required>
+                            <option selected disabled value="">Elige una</option>
                         </select>
                         <div class="invalid-feedback">
-                            Please select a valid state.
+                            Por favor, selecciona una película.
                         </div>
                     </div>
                     <script>
@@ -68,27 +73,39 @@
                         document.addEventListener("DOMContentLoaded", fetchState);
                     </script>
                     <div class="col-md-3 mb-3">
-                        <label for="validationCustom05">Zip</label>
-                        <input type="text" class="form-control" id="validationCustom05" required>
+                        <label for="validationCustom05">Horario</label>
+                        <select class="custom-select" name="horario" id="validationCustom03" required>
+                            <option selected disabled value="">Elige una hora</option>
+                            <option>12:30 pm</option>
+                            <option>4:30 pm</option>
+                            <option>8:30 pm</option>
+                        </select>
                         <div class="invalid-feedback">
-                            Please provide a valid zip.
+                            Por favor, selecciona una hora.
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <label for="validationCustom05">Personas</label>
+                        <select class="custom-select" name="personas" id="validationCustom03" required>
+                            <option selected disabled value="">Elige el número de personas</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                            <option>6</option>
+                            <option>7</option>
+                            <option>8</option>
+                            <option>9</option>
+                            <option>10</option>
+                        </select>
+                        <div class="invalid-feedback">
+                            Por favor, selecciona una hora.
                         </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                        <label class="form-check-label" for="invalidCheck">
-                            Agree to terms and conditions
-                        </label>
-                        <div class="invalid-feedback">
-                            You must agree before submitting.
-                        </div>
-                    </div>
-                </div>
-                <button class="btn btn-primary" type="submit">Submit form</button>
+                <button class="btn btn-primary btn-block" type="submit">Comprar Tickets</button>
             </form>
-
             <script>
                 // Example starter JavaScript for disabling form submissions if there are invalid fields
                 (function () {
@@ -120,6 +137,7 @@
                 </div>
             </div>
         </div>
+        <br>
         <br>
         <br>
         <%- include('./partials/footer.ejs') %>
